--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -14,10 +14,10 @@
     </integer-array>
 
 
-    <color name="theme2_darker_color">#ff40af1d</color>
-    <color name="theme2_dark_color">#ff2d3a88</color>
-    <color name="theme2_primary_color">#ffbc5357</color>
-    <color name="theme2_light_color">#ffb7b3f0</color>
+    <color name="theme2_darker_color">#0089A0</color>
+    <color name="theme2_dark_color">#fffcf334</color>
+    <color name="theme2_primary_color">#11C5DC</color>
+    <color name="theme2_light_color">#70FFFF</color>
 
     <integer-array name="custom_theme_2">
         <item>@color/theme2_darker_color</item>
